// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ModelsBySolution > matches snapshot with multiple solutions 1`] = `
<DocumentFragment>
  <div
    class="models-by-solutions"
  >
    <header
      class="usa-header usa-header--basic margin-bottom-4 models-by-solutions__nav-container"
      data-testid="header"
    >
      <div
        class="usa-nav-container padding-0"
      >
        <nav
          class="usa-nav flex-justify-start margin-0 padding-0"
        >
          <button
            aria-label="Close Navigation Menu"
            class="usa-nav__close"
            data-testid="navCloseButton"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="usa-icon usa-icon--size-3"
              focusable="false"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </button>
          <ul
            class="usa-nav__primary usa-accordion"
          >
            <li
              class="usa-nav__primary-item"
            >
              <button
                class="usa-nav__link margin-left-neg-2 margin-right-2 usa-current"
                type="button"
              >
                <span>
                  4innovation
                </span>
              </button>
            </li>
            <li
              class="usa-nav__primary-item"
            >
              <button
                class="usa-nav__link margin-left-neg-2 margin-right-2"
                type="button"
              >
                <span>
                  CBOSC
                </span>
              </button>
            </li>
          </ul>
        </nav>
      </div>
    </header>
    <div
      id="models-by-solution-table"
    >
      <div
        class="models-by-solutions"
      >
        <div
          class="bg-primary-lighter radius-md padding-2"
        >
          <div
            class="grid-row flex-align-center"
            data-testid="grid"
          >
            <div
              class="tablet:grid-col-6 desktop:grid-col-7"
              data-testid="grid"
            >
              <h3
                class="margin-y-1"
              >
                 4innovation (4i)
              </h3>
            </div>
            <div
              class="tablet:grid-col-6 desktop:grid-col-5 models-by-solutions__banner-buttons row-reverse"
              data-testid="grid"
            >
              <ul
                class="usa-button-group usa-button-group--segmented"
              >
                <li
                  class="usa-button-group__item"
                >
                  <button
                    class="usa-button padding-y-2 bg-primary-darker"
                    data-testid="button"
                    type="button"
                  >
                    <div>
                      Total
                    </div>
                    <div
                      data-testid="total-count"
                    >
                      5
                    </div>
                  </button>
                </li>
                <li
                  class="usa-button-group__item"
                >
                  <button
                    class="usa-button padding-y-2"
                    data-testid="button"
                    type="button"
                  >
                    <div>
                      Planned
                    </div>
                    <div
                      data-testid="planned-count"
                    >
                      3
                    </div>
                  </button>
                </li>
                <li
                  class="usa-button-group__item"
                >
                  <button
                    class="usa-button padding-y-2"
                    data-testid="button"
                    type="button"
                  >
                    <div>
                      Active
                    </div>
                    <div
                      data-testid="active-count"
                    >
                      2
                    </div>
                  </button>
                </li>
                <li
                  class="usa-button-group__item"
                >
                  <button
                    class="usa-button padding-y-2"
                    data-testid="button"
                    type="button"
                  >
                    <div>
                      Ended
                    </div>
                    <div
                      data-testid="ended-count"
                    >
                      0
                    </div>
                  </button>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
      <div
        class="margin-top-3"
      >
        <form
          class="usa-form usa-search margin-bottom-3 maxw-none width-mobile-lg"
          data-testid="table-client-filter"
          role="search"
        >
          <label
            class="usa-sr-only"
            data-testid="label"
            for="models-by-solution-table-search"
          >
            Search Table
          </label>
          <input
            class="usa-input"
            data-testid="textInput"
            id="models-by-solution-table-search"
            name="Models using specific solutions Search"
            role="searchbox"
            type="search"
            value=""
          />
          <button
            class="usa-button"
            data-testid="button"
            type="submit"
          >
            <svg
              aria-label="search"
              class="usa-icon usa-icon--size-3"
              focusable="false"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
              />
            </svg>
          </button>
        </form>
        <div
          class=""
          data-testid="page-results"
        >
          <span>
            <div
              aria-live="polite"
              class="margin-bottom-2"
              role="status"
            >
              Showing 1-3 of 5 results 
            </div>
          </span>
        </div>
      </div>
      <div
        class="grid-row grid-gap-2 margin-bottom-1 margin-top-4"
        data-testid="grid"
      >
        <div
          class="tablet:grid-col-6 desktop:grid-col-4 display-flex"
          data-testid="grid"
        >
          <li
            class="usa-card model-solution-card width-full margin-bottom-0"
            data-testid="Model 1 for INNOVATION"
          >
            <div
              class="usa-card__container"
            >
              <div
                class="height-full display-flex flex-column"
              >
                <div
                  class="grid-row"
                  data-testid="grid"
                >
                  <div
                    class="desktop:grid-col-12"
                    data-testid="grid"
                  >
                    <h3
                      class="margin-top-0"
                    >
                      <a
                        class="usa-link"
                        data-discover="true"
                        href="/models/model-INNOVATION-0/read-view"
                      >
                        Model 1 for INNOVATION (M1)
                      </a>
                    </h3>
                  </div>
                  <div
                    class="desktop:grid-col-12"
                    data-testid="grid"
                  >
                    <div
                      class="display-flex margin-bottom-1"
                    >
                      <p
                        class="text-bold margin-top-0 margin-right-1 margin-bottom-0"
                      >
                        Status
                      </p>
                      <span
                        class="usa-tag mint-tag bg-base text-white margin-right-1 padding-x-1"
                        data-testid="tag"
                      >
                        Active
                      </span>
                    </div>
                  </div>
                  <div
                    class="desktop:grid-col-12"
                    data-testid="grid"
                  >
                    <p
                      class="text-bold margin-y-0 margin-right-1"
                    >
                      Category
                    </p>
                    <i
                      class="text-base"
                    >
                      To be determined
                    </i>
                  </div>
                  <div
                    class="desktop:grid-col-12"
                    data-testid="grid"
                  >
                    <div
                      class="grid-row grid-gap"
                      data-testid="grid"
                    >
                      <div
                        class="mobile:grid-col-6 desktop:grid-col-6"
                        data-testid="grid"
                      >
                        <p
                          class="text-bold margin-bottom-0 margin-right-1"
                        >
                          Start date
                        </p>
                        <p
                          class="margin-top-0 margin-bottom-0"
                        >
                          <i
                            class="text-base"
                          >
                            To be determined
                          </i>
                        </p>
                      </div>
                      <div
                        class="mobile:grid-col-6 desktop:grid-col-6"
                        data-testid="grid"
                      >
                        <p
                          class="text-bold margin-bottom-0 margin-right-1"
                        >
                          End date
                        </p>
                        <p
                          class="margin-top-0 margin-bottom-0"
                        >
                          <i
                            class="text-base"
                          >
                            To be determined
                          </i>
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </li>
        </div>
        <div
          class="tablet:grid-col-6 desktop:grid-col-4 display-flex"
          data-testid="grid"
        >
          <li
            class="usa-card model-solution-card width-full margin-bottom-0"
            data-testid="Model 2 for INNOVATION"
          >
            <div
              class="usa-card__container"
            >
              <div
                class="height-full display-flex flex-column"
              >
                <div
                  class="grid-row"
                  data-testid="grid"
                >
                  <div
                    class="desktop:grid-col-12"
                    data-testid="grid"
                  >
                    <h3
                      class="margin-top-0"
                    >
                      <a
                        class="usa-link"
                        data-discover="true"
                        href="/models/model-INNOVATION-1/read-view"
                      >
                        Model 2 for INNOVATION (M2)
                      </a>
                    </h3>
                  </div>
                  <div
                    class="desktop:grid-col-12"
                    data-testid="grid"
                  >
                    <div
                      class="display-flex margin-bottom-1"
                    >
                      <p
                        class="text-bold margin-top-0 margin-right-1 margin-bottom-0"
                      >
                        Status
                      </p>
                      <span
                        class="usa-tag mint-tag bg-base text-white margin-right-1 padding-x-1"
                        data-testid="tag"
                      >
                        Draft Model Plan
                      </span>
                    </div>
                  </div>
                  <div
                    class="desktop:grid-col-12"
                    data-testid="grid"
                  >
                    <p
                      class="text-bold margin-y-0 margin-right-1"
                    >
                      Category
                    </p>
                    <i
                      class="text-base"
                    >
                      To be determined
                    </i>
                  </div>
                  <div
                    class="desktop:grid-col-12"
                    data-testid="grid"
                  >
                    <div
                      class="grid-row grid-gap"
                      data-testid="grid"
                    >
                      <div
                        class="mobile:grid-col-6 desktop:grid-col-6"
                        data-testid="grid"
                      >
                        <p
                          class="text-bold margin-bottom-0 margin-right-1"
                        >
                          Start date
                        </p>
                        <p
                          class="margin-top-0 margin-bottom-0"
                        >
                          <i
                            class="text-base"
                          >
                            To be determined
                          </i>
                        </p>
                      </div>
                      <div
                        class="mobile:grid-col-6 desktop:grid-col-6"
                        data-testid="grid"
                      >
                        <p
                          class="text-bold margin-bottom-0 margin-right-1"
                        >
                          End date
                        </p>
                        <p
                          class="margin-top-0 margin-bottom-0"
                        >
                          <i
                            class="text-base"
                          >
                            To be determined
                          </i>
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </li>
        </div>
        <div
          class="tablet:grid-col-6 desktop:grid-col-4 display-flex"
          data-testid="grid"
        >
          <li
            class="usa-card model-solution-card width-full margin-bottom-0"
            data-testid="Model 3 for INNOVATION"
          >
            <div
              class="usa-card__container"
            >
              <div
                class="height-full display-flex flex-column"
              >
                <div
                  class="grid-row"
                  data-testid="grid"
                >
                  <div
                    class="desktop:grid-col-12"
                    data-testid="grid"
                  >
                    <h3
                      class="margin-top-0"
                    >
                      <a
                        class="usa-link"
                        data-discover="true"
                        href="/models/model-INNOVATION-2/read-view"
                      >
                        Model 3 for INNOVATION (M3)
                      </a>
                    </h3>
                  </div>
                  <div
                    class="desktop:grid-col-12"
                    data-testid="grid"
                  >
                    <div
                      class="display-flex margin-bottom-1"
                    >
                      <p
                        class="text-bold margin-top-0 margin-right-1 margin-bottom-0"
                      >
                        Status
                      </p>
                      <span
                        class="usa-tag mint-tag bg-base text-white margin-right-1 padding-x-1"
                        data-testid="tag"
                      >
                        Draft Model Plan
                      </span>
                    </div>
                  </div>
                  <div
                    class="desktop:grid-col-12"
                    data-testid="grid"
                  >
                    <p
                      class="text-bold margin-y-0 margin-right-1"
                    >
                      Category
                    </p>
                    <i
                      class="text-base"
                    >
                      To be determined
                    </i>
                  </div>
                  <div
                    class="desktop:grid-col-12"
                    data-testid="grid"
                  >
                    <div
                      class="grid-row grid-gap"
                      data-testid="grid"
                    >
                      <div
                        class="mobile:grid-col-6 desktop:grid-col-6"
                        data-testid="grid"
                      >
                        <p
                          class="text-bold margin-bottom-0 margin-right-1"
                        >
                          Start date
                        </p>
                        <p
                          class="margin-top-0 margin-bottom-0"
                        >
                          <i
                            class="text-base"
                          >
                            To be determined
                          </i>
                        </p>
                      </div>
                      <div
                        class="mobile:grid-col-6 desktop:grid-col-6"
                        data-testid="grid"
                      >
                        <p
                          class="text-bold margin-bottom-0 margin-right-1"
                        >
                          End date
                        </p>
                        <p
                          class="margin-top-0 margin-bottom-0"
                        >
                          <i
                            class="text-base"
                          >
                            To be determined
                          </i>
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </li>
        </div>
      </div>
      <div
        class=""
      >
        <nav
          aria-label="Pagination"
          class="usa-pagination mint-pagination"
        >
          <ul
            class="usa-pagination__list"
          >
            <li
              class="usa-pagination__item usa-pagination__page-no"
            >
              <button
                aria-current="page"
                aria-label="Page 1"
                class="usa-button usa-button--unstyled usa-pagination__button usa-current"
                data-testid="pagination-page-number"
                type="button"
              >
                1
              </button>
            </li>
            <li
              class="usa-pagination__item usa-pagination__page-no"
            >
              <button
                aria-label="Page 2"
                class="usa-button usa-button--unstyled usa-pagination__button"
                data-testid="pagination-page-number"
                type="button"
              >
                2
              </button>
            </li>
            <li
              class="usa-pagination__item usa-pagination__arrow"
            >
              <button
                aria-label="Next page"
                class="usa-button usa-button--unstyled usa-pagination__link usa-pagination__next-page"
                data-testid="pagination-next"
                type="button"
              >
                <span
                  class="usa-pagination__link-text"
                >
                  Next
                </span>
                <svg
                  aria-hidden="true"
                  class="usa-icon"
                  focusable="false"
                  height="1em"
                  role="img"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                  />
                </svg>
              </button>
            </li>
          </ul>
        </nav>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ModelsBySolution > matches snapshot with no solutions selected 1`] = `
<DocumentFragment>
  <div
    class="usa-alert usa-alert--info flex margin-top-4"
    data-testid="alert"
  >
    <div
      class="usa-alert__body"
    >
      <h4
        class="usa-alert__heading"
      >
        It looks like you forgot to select at least one solution.
      </h4>
      <p
        class="usa-alert__text"
      >
        <span>
          <a
            class="usa-link display-flex flex-align-center text-bold"
            data-discover="true"
            href="/homepage-settings/solutions"
          >
            <span
              class="margin-right-1"
            >
              Select solutions
            </span>
            <svg
              aria-label="forward"
              class="usa-icon"
              focusable="false"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
              />
            </svg>
          </a>
        </span>
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ModelsBySolution > matches snapshot with single solution 1`] = `
<DocumentFragment>
  <div
    class="models-by-solutions"
  >
    <header
      class="usa-header usa-header--basic margin-bottom-4 models-by-solutions__nav-container"
      data-testid="header"
    >
      <div
        class="usa-nav-container padding-0"
      >
        <nav
          class="usa-nav flex-justify-start margin-0 padding-0"
        >
          <button
            aria-label="Close Navigation Menu"
            class="usa-nav__close"
            data-testid="navCloseButton"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="usa-icon usa-icon--size-3"
              focusable="false"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </button>
          <ul
            class="usa-nav__primary usa-accordion"
          >
            <li
              class="usa-nav__primary-item"
            >
              <button
                class="usa-nav__link margin-left-neg-2 margin-right-2 usa-current"
                type="button"
              >
                <span>
                  4innovation
                </span>
              </button>
            </li>
          </ul>
        </nav>
      </div>
    </header>
    <div
      id="models-by-solution-table"
    >
      <div
        class="models-by-solutions"
      >
        <div
          class="bg-primary-lighter radius-md padding-2"
        >
          <div
            class="grid-row flex-align-center"
            data-testid="grid"
          >
            <div
              class="tablet:grid-col-6 desktop:grid-col-7"
              data-testid="grid"
            >
              <h3
                class="margin-y-1"
              >
                 4innovation (4i)
              </h3>
            </div>
            <div
              class="tablet:grid-col-6 desktop:grid-col-5 models-by-solutions__banner-buttons row-reverse"
              data-testid="grid"
            >
              <ul
                class="usa-button-group usa-button-group--segmented"
              >
                <li
                  class="usa-button-group__item"
                >
                  <button
                    class="usa-button padding-y-2 bg-primary-darker"
                    data-testid="button"
                    type="button"
                  >
                    <div>
                      Total
                    </div>
                    <div
                      data-testid="total-count"
                    >
                      5
                    </div>
                  </button>
                </li>
                <li
                  class="usa-button-group__item"
                >
                  <button
                    class="usa-button padding-y-2"
                    data-testid="button"
                    type="button"
                  >
                    <div>
                      Planned
                    </div>
                    <div
                      data-testid="planned-count"
                    >
                      3
                    </div>
                  </button>
                </li>
                <li
                  class="usa-button-group__item"
                >
                  <button
                    class="usa-button padding-y-2"
                    data-testid="button"
                    type="button"
                  >
                    <div>
                      Active
                    </div>
                    <div
                      data-testid="active-count"
                    >
                      2
                    </div>
                  </button>
                </li>
                <li
                  class="usa-button-group__item"
                >
                  <button
                    class="usa-button padding-y-2"
                    data-testid="button"
                    type="button"
                  >
                    <div>
                      Ended
                    </div>
                    <div
                      data-testid="ended-count"
                    >
                      0
                    </div>
                  </button>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
      <div
        class="margin-top-3"
      >
        <form
          class="usa-form usa-search margin-bottom-3 maxw-none width-mobile-lg"
          data-testid="table-client-filter"
          role="search"
        >
          <label
            class="usa-sr-only"
            data-testid="label"
            for="models-by-solution-table-search"
          >
            Search Table
          </label>
          <input
            class="usa-input"
            data-testid="textInput"
            id="models-by-solution-table-search"
            name="Models using specific solutions Search"
            role="searchbox"
            type="search"
            value=""
          />
          <button
            class="usa-button"
            data-testid="button"
            type="submit"
          >
            <svg
              aria-label="search"
              class="usa-icon usa-icon--size-3"
              focusable="false"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
              />
            </svg>
          </button>
        </form>
        <div
          class=""
          data-testid="page-results"
        >
          <span>
            <div
              aria-live="polite"
              class="margin-bottom-2"
              role="status"
            >
              Showing 1-3 of 5 results 
            </div>
          </span>
        </div>
      </div>
      <div
        class="grid-row grid-gap-2 margin-bottom-1 margin-top-4"
        data-testid="grid"
      >
        <div
          class="tablet:grid-col-6 desktop:grid-col-4 display-flex"
          data-testid="grid"
        >
          <li
            class="usa-card model-solution-card width-full margin-bottom-0"
            data-testid="Model 1 for INNOVATION"
          >
            <div
              class="usa-card__container"
            >
              <div
                class="height-full display-flex flex-column"
              >
                <div
                  class="grid-row"
                  data-testid="grid"
                >
                  <div
                    class="desktop:grid-col-12"
                    data-testid="grid"
                  >
                    <h3
                      class="margin-top-0"
                    >
                      <a
                        class="usa-link"
                        data-discover="true"
                        href="/models/model-INNOVATION-0/read-view"
                      >
                        Model 1 for INNOVATION (M1)
                      </a>
                    </h3>
                  </div>
                  <div
                    class="desktop:grid-col-12"
                    data-testid="grid"
                  >
                    <div
                      class="display-flex margin-bottom-1"
                    >
                      <p
                        class="text-bold margin-top-0 margin-right-1 margin-bottom-0"
                      >
                        Status
                      </p>
                      <span
                        class="usa-tag mint-tag bg-base text-white margin-right-1 padding-x-1"
                        data-testid="tag"
                      >
                        Active
                      </span>
                    </div>
                  </div>
                  <div
                    class="desktop:grid-col-12"
                    data-testid="grid"
                  >
                    <p
                      class="text-bold margin-y-0 margin-right-1"
                    >
                      Category
                    </p>
                    <i
                      class="text-base"
                    >
                      To be determined
                    </i>
                  </div>
                  <div
                    class="desktop:grid-col-12"
                    data-testid="grid"
                  >
                    <div
                      class="grid-row grid-gap"
                      data-testid="grid"
                    >
                      <div
                        class="mobile:grid-col-6 desktop:grid-col-6"
                        data-testid="grid"
                      >
                        <p
                          class="text-bold margin-bottom-0 margin-right-1"
                        >
                          Start date
                        </p>
                        <p
                          class="margin-top-0 margin-bottom-0"
                        >
                          <i
                            class="text-base"
                          >
                            To be determined
                          </i>
                        </p>
                      </div>
                      <div
                        class="mobile:grid-col-6 desktop:grid-col-6"
                        data-testid="grid"
                      >
                        <p
                          class="text-bold margin-bottom-0 margin-right-1"
                        >
                          End date
                        </p>
                        <p
                          class="margin-top-0 margin-bottom-0"
                        >
                          <i
                            class="text-base"
                          >
                            To be determined
                          </i>
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </li>
        </div>
        <div
          class="tablet:grid-col-6 desktop:grid-col-4 display-flex"
          data-testid="grid"
        >
          <li
            class="usa-card model-solution-card width-full margin-bottom-0"
            data-testid="Model 2 for INNOVATION"
          >
            <div
              class="usa-card__container"
            >
              <div
                class="height-full display-flex flex-column"
              >
                <div
                  class="grid-row"
                  data-testid="grid"
                >
                  <div
                    class="desktop:grid-col-12"
                    data-testid="grid"
                  >
                    <h3
                      class="margin-top-0"
                    >
                      <a
                        class="usa-link"
                        data-discover="true"
                        href="/models/model-INNOVATION-1/read-view"
                      >
                        Model 2 for INNOVATION (M2)
                      </a>
                    </h3>
                  </div>
                  <div
                    class="desktop:grid-col-12"
                    data-testid="grid"
                  >
                    <div
                      class="display-flex margin-bottom-1"
                    >
                      <p
                        class="text-bold margin-top-0 margin-right-1 margin-bottom-0"
                      >
                        Status
                      </p>
                      <span
                        class="usa-tag mint-tag bg-base text-white margin-right-1 padding-x-1"
                        data-testid="tag"
                      >
                        Draft Model Plan
                      </span>
                    </div>
                  </div>
                  <div
                    class="desktop:grid-col-12"
                    data-testid="grid"
                  >
                    <p
                      class="text-bold margin-y-0 margin-right-1"
                    >
                      Category
                    </p>
                    <i
                      class="text-base"
                    >
                      To be determined
                    </i>
                  </div>
                  <div
                    class="desktop:grid-col-12"
                    data-testid="grid"
                  >
                    <div
                      class="grid-row grid-gap"
                      data-testid="grid"
                    >
                      <div
                        class="mobile:grid-col-6 desktop:grid-col-6"
                        data-testid="grid"
                      >
                        <p
                          class="text-bold margin-bottom-0 margin-right-1"
                        >
                          Start date
                        </p>
                        <p
                          class="margin-top-0 margin-bottom-0"
                        >
                          <i
                            class="text-base"
                          >
                            To be determined
                          </i>
                        </p>
                      </div>
                      <div
                        class="mobile:grid-col-6 desktop:grid-col-6"
                        data-testid="grid"
                      >
                        <p
                          class="text-bold margin-bottom-0 margin-right-1"
                        >
                          End date
                        </p>
                        <p
                          class="margin-top-0 margin-bottom-0"
                        >
                          <i
                            class="text-base"
                          >
                            To be determined
                          </i>
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </li>
        </div>
        <div
          class="tablet:grid-col-6 desktop:grid-col-4 display-flex"
          data-testid="grid"
        >
          <li
            class="usa-card model-solution-card width-full margin-bottom-0"
            data-testid="Model 3 for INNOVATION"
          >
            <div
              class="usa-card__container"
            >
              <div
                class="height-full display-flex flex-column"
              >
                <div
                  class="grid-row"
                  data-testid="grid"
                >
                  <div
                    class="desktop:grid-col-12"
                    data-testid="grid"
                  >
                    <h3
                      class="margin-top-0"
                    >
                      <a
                        class="usa-link"
                        data-discover="true"
                        href="/models/model-INNOVATION-2/read-view"
                      >
                        Model 3 for INNOVATION (M3)
                      </a>
                    </h3>
                  </div>
                  <div
                    class="desktop:grid-col-12"
                    data-testid="grid"
                  >
                    <div
                      class="display-flex margin-bottom-1"
                    >
                      <p
                        class="text-bold margin-top-0 margin-right-1 margin-bottom-0"
                      >
                        Status
                      </p>
                      <span
                        class="usa-tag mint-tag bg-base text-white margin-right-1 padding-x-1"
                        data-testid="tag"
                      >
                        Draft Model Plan
                      </span>
                    </div>
                  </div>
                  <div
                    class="desktop:grid-col-12"
                    data-testid="grid"
                  >
                    <p
                      class="text-bold margin-y-0 margin-right-1"
                    >
                      Category
                    </p>
                    <i
                      class="text-base"
                    >
                      To be determined
                    </i>
                  </div>
                  <div
                    class="desktop:grid-col-12"
                    data-testid="grid"
                  >
                    <div
                      class="grid-row grid-gap"
                      data-testid="grid"
                    >
                      <div
                        class="mobile:grid-col-6 desktop:grid-col-6"
                        data-testid="grid"
                      >
                        <p
                          class="text-bold margin-bottom-0 margin-right-1"
                        >
                          Start date
                        </p>
                        <p
                          class="margin-top-0 margin-bottom-0"
                        >
                          <i
                            class="text-base"
                          >
                            To be determined
                          </i>
                        </p>
                      </div>
                      <div
                        class="mobile:grid-col-6 desktop:grid-col-6"
                        data-testid="grid"
                      >
                        <p
                          class="text-bold margin-bottom-0 margin-right-1"
                        >
                          End date
                        </p>
                        <p
                          class="margin-top-0 margin-bottom-0"
                        >
                          <i
                            class="text-base"
                          >
                            To be determined
                          </i>
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </li>
        </div>
      </div>
      <div
        class=""
      >
        <nav
          aria-label="Pagination"
          class="usa-pagination mint-pagination"
        >
          <ul
            class="usa-pagination__list"
          >
            <li
              class="usa-pagination__item usa-pagination__page-no"
            >
              <button
                aria-current="page"
                aria-label="Page 1"
                class="usa-button usa-button--unstyled usa-pagination__button usa-current"
                data-testid="pagination-page-number"
                type="button"
              >
                1
              </button>
            </li>
            <li
              class="usa-pagination__item usa-pagination__page-no"
            >
              <button
                aria-label="Page 2"
                class="usa-button usa-button--unstyled usa-pagination__button"
                data-testid="pagination-page-number"
                type="button"
              >
                2
              </button>
            </li>
            <li
              class="usa-pagination__item usa-pagination__arrow"
            >
              <button
                aria-label="Next page"
                class="usa-button usa-button--unstyled usa-pagination__link usa-pagination__next-page"
                data-testid="pagination-next"
                type="button"
              >
                <span
                  class="usa-pagination__link-text"
                >
                  Next
                </span>
                <svg
                  aria-hidden="true"
                  class="usa-icon"
                  focusable="false"
                  height="1em"
                  role="img"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                  />
                </svg>
              </button>
            </li>
          </ul>
        </nav>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
